--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ body {
 .info {
   width: 100%;
   height: 100vh;
-  background-image: url('assets/img/black_texture.jpg');
+  background-image: url("assets/img/black_texture.jpg");
 }
 .info_wrapper {
   height: 100%;
@@ -130,6 +130,10 @@ body {
 
   margin-left: 3%;
 }
+.pole2 {
+  display: none;
+  scale: 0.75;
+}
 /* gallery */
 
 .galary_image {
@@ -179,7 +183,7 @@ body {
 .shave_block {
   width: 100%;
   height: 100vh;
-  background-image: url('assets/img/йцуйцу.jpg');
+  background-image: url("assets/img/йцуйцу.jpg");
   background-size: cover;
   background-position: top;
   display: flex;
@@ -304,26 +308,27 @@ body {
   }
   .info {
     position: relative;
-    height: 65vh;
+    height: 80vh;
   }
   .info_text {
     width: 82%;
     margin: 0 auto;
-    text-align: right;
-    padding-right: 40px;
+    text-align: justify;
+  }
+  .info_text_box {
   }
   .info_text_box p {
     font-size: 14px;
   }
   .info_text_box h4 {
-    font-size: 22px;
+    font-size: 20px;
   }
   .info_wrapper {
     flex-direction: column-reverse;
     justify-content: space-evenly;
   }
   .dani_photo {
-    height: 200px;
+    height: 35%;
     overflow: hidden;
   }
   .dani_photo img {
@@ -331,9 +336,18 @@ body {
   }
   .pole {
     position: absolute;
-    top: 35%;
-    right: -47px;
-    height: 70%;
+    top: 8%;
+    right: -10%;
+    height: 45%;
+    margin: 0;
+  }
+  .pole2 {
+    display: block;
+    position: absolute;
+    top: 8%;
+    left: -10%;
+    height: 45%;
+    margin: 0;
   }
 
   /* galery */
