--- a/styles.css
+++ b/styles.css
@@ -141,6 +141,20 @@ body {
   display: flex;
   min-width: 0;
   padding: 25px 0 25px 35px;
+  position: relative;
+}
+.shadow {
+  position: absolute;
+  width: 20vw;
+  height: 100%;
+  right: 0;
+  top: -8px;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 0) 0%,
+    rgba(0, 0, 0, 1) 89%
+  );
 }
 .galary_cont {
   min-width: 250px;
