--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ h6 {
 html,
 body {
   overflow-x: hidden;
+  /* overflow-y: hidden; */
   height: 100%;
   width: 100%;
   color: #ffffff;
@@ -49,6 +50,7 @@ body {
   display: flex;
   justify-content: center;
   flex-direction: column;
+  overflow-y: scroll;
 }
 .header_container {
   width: 100%;
