--- a/styles.css
+++ b/styles.css
@@ -90,11 +90,15 @@ body {
 }
 .dani_photo {
   height: 100vh;
-  width: 90vh;
+  width: 42vw;
   overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #fff;
+  background-image: url(/assets/img/Photo.png);
+  background-size: cover;
+  background-position: center;
 }
 .info_text {
   width: 47%;
@@ -136,6 +140,10 @@ body {
   display: none;
   scale: 0.75;
 }
+.pole3 {
+  display: none;
+  scale: 0.75;
+}
 /* gallery */
 
 .galary_image {
@@ -146,11 +154,12 @@ body {
   position: relative;
 }
 .shadow {
+  z-index: 9999;
   position: absolute;
   width: 20vw;
   height: 100%;
   right: 0;
-  top: -8px;
+  top: 0;
   background: rgb(2, 0, 36);
   background: linear-gradient(
     90deg,
@@ -159,7 +168,7 @@ body {
   );
 }
 .galary_cont {
-  min-width: 250px;
+  min-width: 22%;
   display: flex;
   align-items: flex-start;
 }
@@ -242,11 +251,15 @@ body {
   color: #fff;
 }
 .shave_icons {
+  margin-top: 2%;
   height: 32%;
 }
 .icons img {
   scale: 0.6;
   cursor: pointer;
+}
+.icons a {
+  height: 100%;
 }
 
 /* ///////////////////////// */
@@ -259,7 +272,7 @@ body {
   bottom: 15px;
   width: 150px;
   height: 150px;
-  z-index: 999;
+  z-index: 999999;
   background: rgba(28, 88, 185, 0.8);
   border-radius: 50%;
   font-family: "Playfair Display";
@@ -305,6 +318,11 @@ body {
 }
 
 /* media  03.01.2023 (не доделанно)*/
+@media screen and (max-width: 1200px) {
+  .galary_cont {
+    min-width: 28%;
+  }
+}
 @media screen and (max-width: 900px) {
   .header {
     height: 100vh;
@@ -316,19 +334,13 @@ body {
     font-size: 32px;
   }
   .pole {
-    position: absolute;
-    top: 8%;
-    right: -10%;
-    height: 45%;
-    margin: 0;
+    display: none;
   }
   .pole2 {
     display: block;
-    position: absolute;
-    top: 8%;
-    left: -10%;
-    height: 45%;
-    margin: 0;
+  }
+  .pole3 {
+    display: block;
   }
   .info_text p {
     font-size: 18px;
@@ -345,7 +357,7 @@ body {
     min-width: 38%;
   }
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 420px) {
   .header {
     height: 30vh;
     background-position: 0 0;
@@ -386,28 +398,32 @@ body {
     justify-content: space-evenly;
   }
   .dani_photo {
-    height: 35%;
+    height: 100%;
     overflow: hidden;
+    min-width: 200px;
   }
   .dani_photo img {
     height: 100%;
   }
   .pole {
-    position: absolute;
-    top: 8%;
-    right: -10%;
-    height: 45%;
-    margin: 0;
+    display: none;
   }
   .pole2 {
     display: block;
-    position: absolute;
-    top: 8%;
-    left: -10%;
-    height: 45%;
-    margin: 0;
+    scale: 0.4;
   }
-
+  .pole3 {
+    display: block;
+    scale: 0.4;
+  }
+  .mobile_wrapper {
+    max-width: 100vw;
+    height: 40%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
   /* galery */
   .galary_cont {
     min-width: 60%;
@@ -446,7 +462,14 @@ body {
   }
 
   /* footer */
+  .footer {
+    height: 28vh;
+  }
   .shave_icons {
-    height: 20%;
+    margin-top: 7%;
+    height: 15%;
+  }
+  .footer_content {
+    font-size: 22px;
   }
 }
