--- a/styles.css
+++ b/styles.css
@@ -224,14 +224,15 @@ body {
   height: 100vh;
   background-image: url("assets/img/йцуйцу.jpg");
   background-size: cover;
-  background-position: top;
+  background-position: 200px 0;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row-reverse;
+  justify-content: space-evenly;
   align-items: center;
 }
 .shave_logo {
-  height: 95vh;
+  height: 50vh;
+  width: 100%;
 }
 
 /* footer */
@@ -455,15 +456,17 @@ body {
 
   /* shave_block */
   .shave_block {
-    height: 50vh;
+    height: 100vh;
     background-size: cover;
-    display: inline-flex;
+    background-position: center;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
   .shave_logo {
-    height: 40vh;
+    height: 70%;
+    width: 50%;
   }
 
   /* button */
