--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ body {
 .header {
   width: 100%;
   height: 100vh;
-  background: url("assets/img/header_bg.jpg") center no-repeat;
+  background: url("assets/img/header_bg.jpg") center no-repeat fixed;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
