--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,7 @@ body {
   height: 100vh;
   background: url("assets/img/header_bg.jpg") center no-repeat fixed;
   background-size: cover;
+  background-attachment: fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
