--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ body {
 .header {
   width: 100%;
   height: 100vh;
-  background: url("assets/img/header_bg.jpg") center no-repeat;
+  background: url("assets/img/header_bg.jpg") center no-repeat fixed;
   background-size: cover;
   background-attachment: fixed;
   -webkit-background-size: cover;
