--- a/styles.css
+++ b/styles.css
@@ -9,34 +9,10 @@
 a {
   text-decoration: none;
 }
-ul,
-ol,
-li {
-  list-style: none;
-}
-img {
-  vertical-align: top;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: inherit;
-  font-size: inherit;
-}
-html,
-body {
-  -webkit-overflow-scrolling: touch;
+body{
   overflow-x: hidden;
-  /* overflow-y: hidden; */
-  height: 100%;
-  width: 100%;
-  color: #ffffff;
-  background-color: #ffffff;
-  font-family: "Playfair Display", serif;
 }
+
 .container {
   width: 100%;
   max-width: 1200px;
@@ -44,12 +20,11 @@ body {
 }
 /* header */
 
+
 .header {
   width: 100%;
   height: 100vh;
-  background: url("assets/img/header_bg.jpg") center no-repeat fixed;
   background-size: cover;
-  background-attachment: fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -57,6 +32,24 @@ body {
   justify-content: center;
   flex-direction: column;
 }
+
+.bg-ios__back {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('assets/img/header_bg.jpg') ; /* путь к фоновой картинке */
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  -webkit-background-size: cover;
+  background-attachment: fixed;
+  -o-background-size: cover;
+  -moz-background-size: cover;
+  z-index: -1;
+}
+
 .header_container {
   width: 100%;
   display: flex;
