--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 a {
   text-decoration: none;
 }
-body{
+body {
   overflow-x: hidden;
 }
 
@@ -19,7 +19,6 @@ body{
   margin: 0 auto;
 }
 /* header */
-
 
 .header {
   width: 100%;
@@ -39,7 +38,7 @@ body{
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('assets/img/header_bg.jpg') ; /* путь к фоновой картинке */
+  background: url("assets/img/header_bg.jpg"); /* путь к фоновой картинке */
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -272,6 +271,9 @@ body{
 .icons a {
   height: 100%;
 }
+.telegram {
+  color: white;
+}
 
 /* media  03.01.2023 (не доделанно)*/
 @media screen and (max-width: 1200px) {
@@ -316,7 +318,7 @@ body{
 @media screen and (max-width: 460px) {
   .header {
     height: 30vh;
-    background-position: 0 0;
+    background-position: cover;
     background-size: contain;
     background-attachment: fixed;
   }
